--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-scripts": "5.0.1",
+    "react-signalr": "^0.2.14",
     "sweetalert2": "^11.6.10",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
