--- a/src/client/package.json
+++ b/src/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://localhost:7186",
   "dependencies": {
+    "@microsoft/signalr": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +17,6 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-scripts": "5.0.1",
-    "react-signalr": "^0.2.14",
     "sweetalert2": "^11.6.10",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
