--- a/src/server/API/appsettings.json
+++ b/src/server/API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "MailServer": "smtp.abv.bg",
+    "Port": 465,
+    "MailName": "BoyanDimovPortfolio",
+    "Email": "dj_bobo99@abv.bg",
+    "Password": "Bo9909288767"
+  }
 }
